# hivemind

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.p2p.yml  docker-compose.test.yml  go.mod  go.sum
.claude/: napkin.md
.github/workflows/: ci.yml
cmd/hivemind/: main.go
deploy/production/: config.yaml  deploy.sh  docker-compose.yml  env.example  hivemind.service  nginx.conf
docs/plans/: 2026-02-27-hivemind-design.md
internal/api/: auth.go  middleware.go  server.go
internal/catalog/: catalog.go  catalog_test.go
internal/cli/: chat.go  commands.go  create.go  health.go  join.go  leave.go  serve.go  signaling.go  status.go  theme.go  web.go
internal/config/: config.go
internal/handlers/: catalog.go  catalog_test.go  common.go  donation_test.go  health.go  inference.go  inference_test.go  prometheus.go  prometheus_test.go  room.go  room_test.go  web.go
internal/infra/: circuit_breaker.go  circuit_breaker_test.go  health_monitor.go  nat_traversal.go  nat_traversal_test.go  peer_grpc_server.go  peer_id.go  peer_service.go  signaling.go  wireguard.go  (+6 more)
proto/: peer.proto  worker.proto
signaling-server/: Dockerfile  main.go
web/: index.html  package-lock.json  package.json  vite.config.ts
worker/: pyproject.toml
worker/tests/: test_forward.py  test_resources.py  test_tensor.py
worker/worker/: __init__.py  __main__.py  server.py
worker/worker/inference/: __init__.py  diffusion.py  llm.py
worker/worker/resources/: __init__.py  detector.py
worker/worker/tensor/: __init__.py  transfer.py
(+56 files in other folders)
